[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/player/Player.gd" type="Script" id=1]
[ext_resource path="res://objects/player/char.dae" type="PackedScene" id=2]

[sub_resource type="CylinderMesh" id=1]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
top_radius = 0.25
bottom_radius = 0.5
height = 2.0
radial_segments = 64
rings = 4

[sub_resource type="SphereShape" id=2]

radius = 0.5

[sub_resource type="PrismMesh" id=3]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
left_to_right = 0.5
size = Vector3( 0.5, 0.5, 0.5 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[sub_resource type="SphereShape" id=4]

radius = 1.0

[node name="Player" type="KinematicBody" groups=[
"player",
]]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 6
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Axis Lock", "Collision", "Transform" ]

[node name="Model" type="MeshInstance" parent="." index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
visible = false
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="." index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="DebugMesh" type="MeshInstance" parent="." index="2"]

transform = Transform( -2.18557e-08, 0.5, -2.18557e-08, 0, -2.18557e-08, -0.5, -0.5, -2.18557e-08, 9.55343e-16, 0.25, 2, 0 )
visible = false
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 3 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="PlayerModel" parent="." index="3" instance=ExtResource( 2 )]

transform = Transform( -8.14603e-08, 0, 0.5, 0, 0.5, 0, -0.5, 0, -8.14603e-08, 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="InteractArea" type="Area" parent="." index="4"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 0
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape" type="CollisionShape" parent="InteractArea" index="0"]

shape = SubResource( 4 )
disabled = false

[connection signal="area_entered" from="InteractArea" to="." method="_on_InteractArea_area_entered"]

[connection signal="area_exited" from="InteractArea" to="." method="_on_InteractArea_area_exited"]


